crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_passphrase_modal_remove_save_not_committed.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│       ┌ Remove passphrase ───────────────────────────────────────────┐       │
│       │ Removes the passphrase and stores plaintext.                 │       │
│       │                                                              │       │
│       │ WARNING: Plaintext storage keeps account secrets unencrypted │       │
│       │ on disk. The vault file is restricted to your user account   │       │
│       │ (mode 0600), but anyone with read access to that file or its │       │
│       │ backups can recover every secret. Use an encrypted vault     │       │
│       │ unless you fully accept this risk.                           │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │ save not committed (committed=false)                         │       │
│       │                 Enter confirm  ·  Esc cancel                 │       │
│       └──────────────────────────────────────────────────────────────┘       │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
