crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_remove_modal_default.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 2572
expression: "render_to_text(&state, snapshot_now(), 80, 20)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│       ┌ Remove account ──────────────────────────────────────────────┐       │
│       │ Remove the following account?                                │       │
│       │                                                              │       │
│       │ GitHub:ben@example.com                                       │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                Enter confirms  ·  Esc cancels                │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
