crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_remove_modal_save_durability_unconfirmed.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994   ██████░░░░   18s             │
│                                                                              │
│       ┌ Remove account ──────────────────────────────────────────────┐       │
│       │ Remove the following account?                                │       │
│       │                                                              │       │
│       │ GitHub:ben@example.com                                       │       │
│       │                                                              │       │
│       │ save durability unconfirmed                                  │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                Enter confirms  ·  Esc cancels                │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
