crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_rename_modal_save_durability_unconfirmed.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ↪   255 062  ██████░░░░   18s │
│                                                                              │
│       ┌ Rename account ──────────────────────────────────────────────┐       │
│       │ Renaming the following account:                              │       │
│       │ GitHub:ben@example.com                                       │       │
│       │                                                              │       │
│       │ New label:  [ ben@example.com ]                              │       │
│       │                                                              │       │
│       │ save durability unconfirmed                                  │       │
│       │                                                              │       │
│       │                  Enter submit  ·  Esc cancel                 │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
